--- a/innovatex/package.json
+++ b/innovatex/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^19.2.11",
     "@angular/platform-browser-dynamic": "^19.2.11",
     "@angular/router": "^19.2.11",
+    "@mercadopago/sdk-js": "^0.0.3",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
